Add mesh generation script using GMSH for STEP files
- Implemented a new Python script `meshgen.py` to automate the mesh generation process from procedural CAD files (.step).
- Configured input and output directories, along with error handling for failed meshes.
- Introduced parallel processing capabilities to enhance performance with multiple CPU cores.
- Added functions to check element quality, determine mesh size based on target element count, and classify surfaces for adiabatic and cooling boundaries.
- Integrated GMSH API calls for mesh generation, physical group assignment, and output file handling.

--- a/environment.yml
+++ b/environment.yml
@@ -1,22 +1,24 @@
-name: casting_gnn
+name: cast_gnn
 channels:
   - pytorch
   - nvidia
   - conda-forge
-
-
+  - defaults
 dependencies:
   - python=3.10
-  - pytorch>=2.1
-  - pytorch-cuda=12.1
+  - pip
   - numpy
   - scipy
-  - matplotlib
   - tqdm
-  - pyyaml
-  - pyvista>=0.43
-  - vtk
-  - pip
+  - meshio             # For .msh to .pt conversion
+  - gmsh               # For mesh/meshgen.py
+  - cadquery           # For step/3dgen.py
+  - pyvista            # For visualization
+  - pytorch
+  - torchvision
+  - torchaudio
+  - pytorch-cuda=11.8  # For RTX 3060 acceleration
+  - pyg                # PyTorch Geometric
   - pip:
-    - torch-scatter
-    - torch-sparse
+    - pyvista[all]
+    - trimesh
